# __OwnNemeAnima__

./: .gitignore  download_models.sh  start.sh
backend/: README.md  pyproject.toml
backend/src/neme_anima/: __init__.py  cli.py  config.py  crop.py  dedup.py  detect.py  frame_select.py  identify.py  pipeline.py  tag.py  track.py  video.py
backend/src/neme_anima/server/: __init__.py  app.py  events.py  job_progress.py  queue.py  registry.py  training_runner.py
backend/src/neme_anima/server/api/: __init__.py  characters.py  frames.py  projects.py  queue.py  refs.py  sources.py  training.py  ws.py
backend/src/neme_anima/storage/: __init__.py  project.py
backend/test001/: project.json
backend/tests/: test_api.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FramesTab.tsx  SettingsTab.tsx  Sidebar.tsx  SourcesTab.tsx  TabBar.tsx  TrainingTab.tsx  UploadTab.tsx
frontend/src/lib/: api.ts  utils.ts
